# lyrics

./: README.md  ch.laurinneff.Lyrics.json  meson.build
data/: ch.laurinneff.Lyrics.appdata.xml.in  ch.laurinneff.Lyrics.desktop.in  ch.laurinneff.Lyrics.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: application.vala  lyric.vala  lyrics.gresource.xml  main.vala  meson.build  mpris.vala  trackinfo.vala  window.ui  window.vala
src/provider/: genius.vala  musixmatch.vala  provider.vala
